# Hach-Nation-Hackathon---Genome-Firewall

./: .gitattributes  .gitignore  LICENSE  README.md  held_out_predictions.csv  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
Track A/: README.md  __init__.py  build_features.py  feature_annotator.py
Track A/tests/: conftest.py  test_track_a.py
Track B/: train.py
TrackC/: app.py  charts.py  chat_assistant.py  evaluate.py  make_figures.py  report_generator.py
data/: README.md  __init__.py  bvbrc.py  download_genomes.py  fetch_bvbrc.py
data/config/: project.json
data/manifests/: CENSUS.md  download_manifest.csv  feature_spec.json  features.csv  label_conflicts.csv  labels.csv  provenance.json  selected_genomes.csv  split_manifest.csv  (+2 more)
docs/: APP_REAL_MODE.md  DATA_PROVENANCE.md  DEPLOY.md  DIFFERENTIATORS.md  PITCH.md  PITCH_DECK.html  PROJECT_DESCRIPTION.md  PROJECT_RECAP.md  SUBMISSION.md  TEAM_STATUS_AND_NEXT_STEPS.md  TRACK_A_COMPLETE.md  TRACK_A_HANDOFF.md
models/: kp_real_grouped.joblib
module1_reader/: README.md  __init__.py  assemble_features.py  build_features.py  build_temporal_split.py  feature_annotator.py  run_cohort_parallel.py  split_manifest.py
module2_predictor/: __init__.py  calibration.py  contracts.py  evaluate.py  predict.py  stewardship.py  train.py
results/: README.md  pitch_metrics.csv
scripts/: annotate_cluster.sh  gpu_ab.sbatch  gpu_ab_dnabert.py  make_pitch_results.py  make_synthetic_fixture.py  run_app_real.sh
tests/: test_bvbrc.py  test_stewardship.py  test_track_b.py
(+16 files in other folders)
