[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-firewall"
version = "0.1.0"
description = "Defensive genome-to-antibiotic-response research prototype"
requires-python = ">=3.11,<3.14"
dependencies = [
  "joblib==1.5.3",
  "numpy==2.4.4",
  "pandas==2.2.3",
  "requests==2.32.3",
  "scikit-learn==1.8.0",
]

[project.optional-dependencies]
app = ["matplotlib==3.10.8", "plotly==6.6.0", "streamlit==1.45.1"]
dev = ["pytest==8.3.4"]

[tool.setuptools]
packages = ["data", "module1_reader", "module2_predictor"]

[tool.setuptools.package-data]
module1_reader = ["fixtures/*.json", "fixtures/*.tsv"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
testpaths = ["tests", "module1_reader/tests"]
